<resources>
    <string name="app_name">Clothing Retail</string>
    <string name="txt_clothing_retail">Clothing Retail</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_items">Items</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_sign_out">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_name_of_item">Name of item</string>
    <string name="txt_clothing_name_detail">Clothing Name</string>
    <string name="txt_clothing_price_detail">100000</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_detail">Description detail</string>
    <string name="number_default">1</string>
    <string name="txt_total_title">Total:\u0020</string>
    <string name="txt_place_order">Place Order</string>
    <string name="txt_order_id">Order ID:\u0020</string>
    <string name="txt_phone_number">Phone Number:\u0020</string>
    <string name="txt_address">Address:\u0020</string>
    <string name="txt_status">Status:\u0020</string>
    <string name="default_phone_number">081234567890</string>
    <string name="default_password">abcd</string>
    <string name="default_user_name">Budi</string>
</resources>