<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_baseline_table_rows_24"
            android:title="@string/menu_items" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/menu_orders" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_sign_out" />
    </group>
</menu>