<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_items">

    <fragment
        android:id="@+id/nav_items"
        android:name="com.alif.clothingretail.ui.items.ItemsFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.alif.clothingretail.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.alif.clothingretail.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />
</navigation>