<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/booties"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="45sp"
            android:fontFamily="@font/NABILA"
            android:textColor="#000000"
            android:text="@string/txt_clothing_retail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_sign_up"
            android:text="@string/txt_sign_up"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:buttonColor="@color/btnSignUp"
            app:shadowColor="@color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp"
            android:layout_margin="8dp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_sign_in"
            android:text="@string/txt_sign_in"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:buttonColor="@color/btnSignActive"
            app:shadowColor="@color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp"
            android:layout_margin="8dp"/>

    </LinearLayout>

</RelativeLayout>