<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClothingDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent">
            
            <ImageView
                android:id="@+id/image_clothing_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="Clothing Name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="parallax">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:backgroundTint="@color/white"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:useCompatPadding="true"
        android:onClick="storeToCart" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/clothing_name_detail"
                        android:layout_marginTop="8dp"
                        android:padding="12dp"
                        android:text="@string/txt_clothing_name_detail"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/layout_price"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="Rp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/clothing_price_detail"
                            android:text="@string/txt_clothing_price_detail"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_width="0dp"
                            android:layout_weight="9"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!-- Here are the increment and decrement buttons -->
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn_decrement"
                            android:text="-"
                            android:textSize="16sp"
                            android:backgroundTint="#EA2D2D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:onClick="decreaseNumber" />

                        <TextView
                            android:id="@+id/number"
                            android:text="@string/number_default"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/btn_increment"
                            android:text="+"
                            android:textSize="16sp"
                            android:backgroundTint="#43E41E"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:onClick="increaseNumber" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/clothing_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:textStyle="bold"
                        android:text="@string/txt_description"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/clothing_description_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:paddingStart="12dp"
                        android:paddingBottom="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/txt_description_detail"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>